[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/topdown-shooter/Spritesheet/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 104, 56 )
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 164, 44, 50, 44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 0 )
shape = SubResource( 1 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 27, 9 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 32, 9 )

[node name="CameraTransform" type="RemoteTransform2D" parent="."]
